# knapsack

./: .gitignore  CMakeLists.txt  DP.cpp  DP.h  ElementManager.cpp  ElementManager.h  Problem.cpp  Problem.h  README.md  SolutionComparer.cpp  SolutionComparer.h  generateTestSet.py  main.cpp  problem.cpp  problem.h  revDP.cpp  revDP.h
DP/: ApproxDP.cpp  ApproxDP.h  ApproxRestrictedDP.cpp  ApproxRestrictedDP.h  NormalDP.cpp  NormalDP.h  RestrictedDP.cpp  RestrictedDP.h  revDPSimple.cpp  revDPSimple.h
pruning_rules/: ApproxPruning.cpp  ApproxPruning.h  ParetoPruning.cpp  ParetoPruning.h  Pruning.cpp  Pruning.h  RemainingWeightPruning.cpp  RemainingWeightPruning.h  RestrictedPruning.cpp  RestrictedPruning.h  UpperBoundPruning.cpp  UpperBoundPruning.h
python/: KnapsackTestGeneration.py  knapsack.txt
solution/: NormalSolution.cpp  NormalSolution.h  RestrictedSolution.cpp  RestrictedSolution.h  Solution.cpp  Solution.h  StatisticManager.cpp  StatisticManager.h
